--- a/TankTrouble/Properties/Resources.resx
+++ b/TankTrouble/Properties/Resources.resx
@@ -160,4 +160,7 @@
   <data name="fire" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\fire.wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
+  <data name="warMusic2" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\warMusic2.wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
 </root>
